--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./movie.ico" />
   </head>
 
   <body>
