changes folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
+      <include src="./partials/theme.html"></include>
       <include src="./partials/gallery.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
