--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <include src="./partials/gallery.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
-
+    <include src="./partials/modal-team.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
