--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <main>
       <include src="./partials/theme.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/pagination.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
 
