--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/theme.html"></include>
+      <include src="./partials/search-form.html"></include>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
     </main>
