--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-team.html"></include>
+    <include src="./partials/scrolltop.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
