add ukrainian langauge

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/theme.html"></include>
+      <!-- <include src="./partials/theme.html"></include> -->
       <include src="./partials/search-form.html"></include>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/pagination.html"></include>
